; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_subr.c_tcp_drop_syn_sent.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_subr.c_tcp_drop_syn_sent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcb = type { i32 }
%struct.tcpcb = type { i64 }

@TCPS_SYN_SENT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_drop_syn_sent(%struct.inpcb* %0, i32 %1) #0 {
  %3 = alloca %struct.inpcb*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tcpcb*, align 8
  store %struct.inpcb* %0, %struct.inpcb** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %7 = call %struct.tcpcb* @intotcpcb(%struct.inpcb* %6)
  store %struct.tcpcb* %7, %struct.tcpcb** %5, align 8
  %8 = load %struct.tcpcb*, %struct.tcpcb** %5, align 8
  %9 = icmp ne %struct.tcpcb* %8, null
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load %struct.tcpcb*, %struct.tcpcb** %5, align 8
  %12 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @TCPS_SYN_SENT, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %10
  %17 = load %struct.tcpcb*, %struct.tcpcb** %5, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @tcp_drop(%struct.tcpcb* %17, i32 %18)
  br label %20

20:                                               ; preds = %16, %10, %2
  ret void
}

declare dso_local %struct.tcpcb* @intotcpcb(%struct.inpcb*) #1

declare dso_local i32 @tcp_drop(%struct.tcpcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
